--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/shashankchauhan9528/SPOTIFY-Clone'"
+                onclick="location.href='https://spotify-clone-phi-lovat.vercel.app/'"
               >
                 Live Demo
               </button>
